--- a/index.html
+++ b/index.html
@@ -25,4 +25,12 @@
     </main>
     <div>☀️ 12°</div>
 </body>
+<footer>
+    <p>
+        This project was coded by 
+        <a href="#" target="_blank">Phefumlela Madyo</a> and is
+        <a href="https://github.com/PhefuM/weather-application" target="_blank"> on Github</a> and
+        <a href="https://lelaweather.netlify.app/" target="_blank"> hosted on Netlify</a>
+    </p>
+ </footer>
 </html>
