--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
     <title>My weather application</title>
 </head>
 <body>
-  <div class="weather-app"
+  <div class="weather-app">
     <header>
-        <form>
+        <form class="search-form">
             <input type="search"
-            placeholder="Enter a city" required />
-            <input type="submit" value="Search" />
-            </form>
+            placeholder="Enter a city" required class="search-form-input" />
+            <input type="submit" value="Search" class="search-form-button"/>
+        </form>
     </header>
-    <div>
     <main>
-        <h1>Paris</h1>
-        <p>
+      <div class="weather-app-data">
+        <h1 class="weather-app-city">Paris</h1>
+        <p class="weather-app-details">
             Tuesday 14:49 , scattered clouds
             <br />
-            Humidity: 66%, Wind: 3.13 km/h
+            Humidity: <strong>66%</strong>, Wind: <strong>3.13 km/h</strong>
         </p>
     </div>
-    </main>
-    <div>☀️ 12°</div>
-</body>
+    <div class="weather-app-temperature-container">
+      <div class="weather-app-icon">☀️</div>
+      <div class="weather-app-temperature">12</div>
+      <div class="weather-app-unit">°C</div>
+</main>
 <footer>
     <p>
         This project was coded by 
@@ -42,4 +44,5 @@
     </p>
  </footer>
 </div>
+</body>
 </html>
