--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" 
     rel="stylesheet"
     />
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>My weather application</title>
 </head>
 <body>
   <div class="weather-app">
     <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
             <input type="search"
-            placeholder="Enter a city" required class="search-form-input" />
-            <input type="submit" value="Search" class="search-form-button"/>
+            placeholder="Enter a city" required class="search-form-input" id="search-form-input"/>
+            <input type="submit" value="Search" class="search-form-button" />
         </form>
     </header>
     <main>
       <div class="weather-app-data">
-        <h1 class="weather-app-city">Paris</h1>
+        <div>
+        <h1 class="weather-app-city" id="city"></h1>
         <p class="weather-app-details">
             Tuesday 14:49 , scattered clouds
             <br />
@@ -31,9 +33,11 @@
         </p>
     </div>
     <div class="weather-app-temperature-container">
-      <div class="weather-app-icon">☀️</div>
-      <div class="weather-app-temperature">12</div>
-      <div class="weather-app-unit">°C</div>
+      <span class="weather-app-icon">☀️</span>
+      <span class="weather-app-temperature" id="temperature">12</span>
+      <span class="weather-app-unit">°C</span>
+    </div>
+</div>
 </main>
 <footer>
     <p>
@@ -45,4 +49,5 @@
  </footer>
 </div>
 </body>
+<script src="src/index.js"></script>
 </html>
