Updated HTML and JS

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
         <div>
         <h1 class="weather-app-city" id="city"></h1>
         <p class="weather-app-details">
-            Tuesday 14:49 , scattered clouds
+            <span id="time" ></span>, 
+            <span id="description"></span>
             <br />
-            Humidity: <strong>66%</strong>, Wind: <strong>3.13 km/h</strong>
+            Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
         </p>
     </div>
     <div class="weather-app-temperature-container">
-      <span class="weather-app-icon">☀️</span>
+      <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png", />
+      <span class="weather-app-icon"></span>
       <span class="weather-app-temperature" id="temperature">12</span>
       <span class="weather-app-unit">°C</span>
     </div>
