Update on html and Javascript files

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         </p>
     </div>
     <div class="weather-app-temperature-container">
-      <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png", />
-      <span class="weather-app-icon"></span>
+      <img
+              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+              id="icon"
+            />
       <span class="weather-app-temperature" id="temperature">12</span>
       <span class="weather-app-unit">°C</span>
     </div>
